[gd_scene load_steps=3 format=3 uid="uid://drhkx1sljmuer"]

[ext_resource type="Script" path="res://Scripts/Options.gd" id="1_2pvgn"]
[ext_resource type="Texture2D" uid="uid://uao3g7vwhpaj" path="res://Assets/Sprites/trak_panel_lrg3.jpg" id="2_ecndo"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
script = ExtResource("1_2pvgn")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BoxContainer" type="BoxContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -261.0
offset_top = 125.0
offset_right = 261.0
offset_bottom = 443.0
grow_horizontal = 2
alignment = 1
vertical = true

[node name="HVsync_Container" type="HBoxContainer" parent="CanvasLayer/BoxContainer"]
layout_mode = 2
alignment = 1

[node name="Vsync_Check" type="CheckButton" parent="CanvasLayer/BoxContainer/HVsync_Container"]
layout_mode = 2
text = "Vsync:"

[node name="HWindow_Container" type="HBoxContainer" parent="CanvasLayer/BoxContainer"]
layout_mode = 2
alignment = 1

[node name="Window_Label" type="Label" parent="CanvasLayer/BoxContainer/HWindow_Container"]
layout_mode = 2
text = "Window Mode:"

[node name="Window_Mode_Option" type="OptionButton" parent="CanvasLayer/BoxContainer/HWindow_Container"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1
item_count = 3
popup/item_0/text = "Windowed"
popup/item_1/text = "Fullscreen"
popup/item_1/id = 3
popup/item_2/text = "Borderless Fullscreen"
popup/item_2/id = 4

[node name="HFPS_Container" type="HBoxContainer" parent="CanvasLayer/BoxContainer"]
layout_mode = 2
alignment = 1

[node name="Max_FPS_Label" type="Label" parent="CanvasLayer/BoxContainer/HFPS_Container"]
layout_mode = 2
text = "Fps Limit:"

[node name="Max_FPS_Option" type="OptionButton" parent="CanvasLayer/BoxContainer/HFPS_Container"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1
item_count = 4
popup/item_0/text = "30"
popup/item_1/text = "60"
popup/item_1/id = 1
popup/item_2/text = "120"
popup/item_2/id = 2
popup/item_3/text = "144"
popup/item_3/id = 3

[node name="HVolume_Container" type="HBoxContainer" parent="CanvasLayer/BoxContainer"]
layout_mode = 2
alignment = 1

[node name="Volume_Label_Text" type="Label" parent="CanvasLayer/BoxContainer/HVolume_Container"]
layout_mode = 2
text = "Volume:"

[node name="Volume_Slider" type="HSlider" parent="CanvasLayer/BoxContainer/HVolume_Container"]
custom_minimum_size = Vector2(180, 25)
layout_mode = 2
value = 100.0
scrollable = false

[node name="Volume_Label_Value" type="Label" parent="CanvasLayer/BoxContainer/HVolume_Container"]
layout_mode = 2
horizontal_alignment = 1

[node name="Save_Button" type="Button" parent="CanvasLayer/BoxContainer"]
layout_mode = 2
text = "Save"

[node name="Back_Button" type="Button" parent="CanvasLayer/BoxContainer"]
layout_mode = 2
text = "Back"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -710.0
offset_top = -51.0
offset_right = 679.0
offset_bottom = 727.0
mouse_filter = 2
texture = ExtResource("2_ecndo")
stretch_mode = 1
